.provarCaches/00D410000011HE0EAM/objects/rstkf__gltxndim__c.object
<CustomObject>
    <description>gltxndim__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__gltxndim_gltxn__r.Name+&quot;-&quot;+ TEXT(rstkf__gltxndim_dimnum__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxndim_cramt__c</fullName>
        <label>Credit amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxndim_dimnum__c</fullName>
        <label>Dimension Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxndim_dimval__c</fullName>
        <label>Dimension Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxndim_dramt__c</fullName>
        <label>Debit amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxndim_glaydimproj__c</fullName>
        <label>glaydimproj</label>
        <referenceTo>rstkf__glaydimproj__c</referenceTo>
        <relationshipLabel>GL Transaction Dimensions</relationshipLabel>
        <relationshipName>gltxndims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxndim_gltxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Transaction</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>GL Transaction Dimensions</relationshipLabel>
        <relationshipName>gltxndims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxndim_net__c</fullName>
        <formula>rstkf__gltxndim_dramt__c  -  rstkf__gltxndim_cramt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Transaction Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxndim_period__c</fullName>
        <label>Fiscal Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>GL Transaction Dimensions</label>
    <listViews>
        <fullName>rstkf__RS_GL_Transaction_Dimensions</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gltxndim_gltxn__c</columns>
        <columns>rstkf__gltxndim_period__c</columns>
        <columns>rstkf__gltxndim_dimnum__c</columns>
        <columns>rstkf__gltxndim_dimval__c</columns>
        <columns>rstkf__gltxndim_dramt__c</columns>
        <columns>rstkf__gltxndim_cramt__c</columns>
        <columns>rstkf__gltxndim_net__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>Chandra</value>
        </filters>
        <label>GL Transaction Dimensions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Transaction Dimensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>